--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "recharts": "^2.12.7",
     "serve": "^14.2.3",
     "sonner": "^1.5.0",
+    "stripe": "^18.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.3",
