[dyad] Corrigindo a conexão do Google Gemini e adicionando autocomplete aos campos de senha. - wrote 14 file(s), added google-auth-library package(s)

--- a/supabase/functions/utils/deno.json
+++ b/supabase/functions/utils/deno.json
@@ -1,6 +1,9 @@
 {
   "imports": {
-    "https://esm.sh/google-auth-library@9.11.0": "https://esm.sh/google-auth-library@9.11.0",
+    "https://esm.sh/google-auth-library@9.11.0": {
+      "url": "https://esm.sh/google-auth-library@9.11.0",
+      "types": "https://esm.sh/google-auth-library@9.11.0?dts"
+    },
     "../utils/google-auth.ts": "./google-auth.ts"
   }
 }
